--- a/workflows/tryhackme-badge-workflow.yml
+++ b/workflows/tryhackme-badge-workflow.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: cta0930/tryhackme-badge-workflow@main
+      - uses: ./
         with:
           username: ".mav3r1ck"
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
